objects/Project_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Field automatically populates based on the Lead Source selected for the Opportunity. If this doesn&apos;t exist, the field defaults to &apos;LZZ&apos;.</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L01 - Advertisement</fullName>
                </value>
                <value>
                    <fullName>L02 - News story / article</fullName>
                </value>
                <value>
                    <fullName>L03 - SHL newsletter</fullName>
                </value>
                <value>
                    <fullName>L04 - Promotional campaign email</fullName>
                </value>
                <value>
                    <fullName>L05 - Promotional campaign direct mail</fullName>
                </value>
                <value>
                    <fullName>L06 - Promotional campaign call</fullName>
                </value>
                <value>
                    <fullName>L07 - SHL Sales / Account Manager / Consultant discussion</fullName>
                </value>
                <value>
                    <fullName>L08 - SHL Duty Consultant</fullName>
                </value>
                <value>
                    <fullName>L09 - SHL Partner</fullName>
                </value>
                <value>
                    <fullName>L10 - SHL website promotion</fullName>
                </value>
                <value>
                    <fullName>L11 - Other (non-SHL) website promotion</fullName>
                </value>
                <value>
                    <fullName>L12 - Reputation / referral</fullName>
                </value>
                <value>
                    <fullName>L13 - Conference / seminar attendance</fullName>
                </value>
                <value>
                    <fullName>L14 - SHL training course attendance</fullName>
                </value>
                <value>
                    <fullName>L15 - Exhibition / trade show attendance</fullName>
                </value>
                <value>
                    <fullName>LZZ - No specified source (eg. simple repeat order)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Project__r.Opportunity__r.Id  , Project__r.Opportunity__r.Name,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Header_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Project__r.Order_Header_Number__c , Project__r.Order_Header_Number__r.ContractNumber,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Project__r.Order_Line_Number__r.Id , Project__r.Order_Line_Number__r.Name,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>Project__r.Order__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_line_For_Data_Migration_Use__c</fullName>
        <formula>Project__r.Order_Line_Number__r.Name</formula>
        <label>Order line (For Data Migration Use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_product_count__c</fullName>
        <description>Used in Apex Class to apply logic on Count of Order Product attached to Invoice Request.</description>
        <label>Order product count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_per_Item__c</fullName>
        <inlineHelpText>Please enter the price per item.</inlineHelpText>
        <label>Price per Item</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_IM_Code__c</fullName>
        <inlineHelpText>Please enter the 13 digit Product Item Master code.</inlineHelpText>
        <label>Product IM Code</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Invoice_Description__c</fullName>
        <inlineHelpText>Please enter a short description for the product line item.</inlineHelpText>
        <label>Product Invoice Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator_Email__c</fullName>
        <label>Project Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Pricing_Model__c</fullName>
        <label>Project Pricing Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project to which this invoice belongs</description>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Invoice Requests</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Proposed_Invoice_Date__c</fullName>
        <label>Proposed Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuantityTotal__c</fullName>
        <formula>IM1_Quantity__c +  IM2_Quantity__c  + IM3_Quantity__c  +  IM4_Quantity__c  + IM5_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Please enter the quantity product sold.</inlineHelpText>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <defaultValue>$User.FirstName  &amp; &quot; &quot; &amp;  $User.LastName</defaultValue>
        <label>Invoice Raised By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportSumExpenseRecharge__c</fullName>
        <formula>IF( ISPICKVAL( IM1_LookupCode__c  ,&quot;EXPENSE RECHARGE&quot;) , TotalAmount_IM1__c,0)+IF( ISPICKVAL( IM2_LookupCode__c  ,&quot;EXPENSE RECHARGE&quot;) ,TotalAmount_IM2__c,0)+
IF(  ISPICKVAL(IM3_LookupCode__c   , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM3__c,0)+IF(  ISPICKVAL(IM4_LookupCode__c   , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM4__c,0)+IF(  ISPICKVAL(IM5_LookupCode__c   , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM5__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportSumExpenseRecharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SHL_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SHL Requestor</description>
        <inlineHelpText>Please enter the name of the person who requested the work to be done in the LBU you are invoicing. This should also be the person the approval email comes from.</inlineHelpText>
        <label>SHL Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSC_Email__c</fullName>
        <label>SSC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Type 1</fullName>
                </value>
                <value>
                    <fullName>Sales Type 2</fullName>
                </value>
                <value>
                    <fullName>Sales Type 3</fullName>
                </value>
                <value>
                    <fullName>Sales Type 4</fullName>
                </value>
                <value>
                    <fullName>Sales Type 5</fullName>
                </value>
                <value>
                    <fullName>Sales Type 6</fullName>
                </value>
                <value>
                    <fullName>Sales Type 7</fullName>
                </value>
                <value>
                    <fullName>Sales Type 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_Approval_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Approval Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Billing_frequency__c</fullName>
        <formula>Project__r.Service_Billing_Frequency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Billing frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicesTotal__c</fullName>
        <formula>if(ISPICKVAL(IM1_LookupCode__c ,&quot;EXPENSE RECHARGE&quot;),0,TotalAmount_IM1__c)+
if(ISPICKVAL(IM2_LookupCode__c ,&quot;EXPENSE RECHARGE&quot;),0,TotalAmount_IM2__c)+
if(ISPICKVAL(IM3_LookupCode__c ,&quot;EXPENSE RECHARGE&quot;),0,TotalAmount_IM3__c)+
if(ISPICKVAL(IM4_LookupCode__c ,&quot;EXPENSE RECHARGE&quot;),0,TotalAmount_IM4__c)+
if(ISPICKVAL(IM5_LookupCode__c ,&quot;EXPENSE RECHARGE&quot;),0,TotalAmount_IM5__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Select the start date from which the amount to be invoiced is calculated</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Invoice Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Submitted for Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the user who submitted this invoice</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_On__c</fullName>
        <description>The Date time when the invoice is submitted.</description>
        <formula>Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sun_Invoice_No__c</fullName>
        <label>Sun Order No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount_IM1__c</fullName>
        <formula>(IM1_UnitPrice__c  *  IM1_Quantity__c) -  IM1_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount_IM2__c</fullName>
        <formula>(IM2_UnitPrice__c * IM2_Quantity__c )- IM2_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount_IM3__c</fullName>
        <formula>(IM3_UnitPrice__c * IM3_Quantity__c) - IM3_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount_Product__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Adjusted_Price__c</fullName>
        <formula>( ( Quantity__c * Price_per_Item__c ) * ( 1 - Discount__c ) ) - Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_to_be_Invoiced_Less_Discoun__c</fullName>
        <formula>Total_Amount_to_be_Invoiced__c  -  Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount to be Invoiced Less Discoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_to_be_Invoiced__c</fullName>
        <formula>IM5_UnitPrice__c + IM4_UnitPrice__c + IM2_UnitPrice__c + IM3_UnitPrice__c + IM1_UnitPrice__c + Total_Adjusted_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total for all services and products invoiced in this Invoice Request.</inlineHelpText>
        <label>Total Amount to be Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Associate_Costs__c</fullName>
        <label>Total Associate Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Associate_Expenses__c</fullName>
        <label>Total Associate Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Recharge__c</fullName>
        <label>Total Expense Recharge</label>
        <summarizedField>Invoice_Billing_Detail__c.Expense_Recharge__c</summarizedField>
        <summaryForeignKey>Invoice_Billing_Detail__c.Invoice_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <label>Total Service Amount</label>
        <summarizedField>Invoice_Billing_Detail__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Billing_Detail__c.Invoice_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rechargeable_Associate_Costs__c</fullName>
        <label>Total Rechargeable Associate Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rechargeable_Expenses__c</fullName>
        <label>Total Approved Rechargeable Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unapproved_Amount__c</fullName>
        <formula>Unapproved_Time_Amount__c +  Unapproved_Expenses_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unapproved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unapproved_Expenses_Amount__c</fullName>
        <label>Unapproved Rechargeable Expenses Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unapproved_Time_Amount__c</fullName>
        <label>Unapproved Time Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Inv{000000}</displayFormat>
        <label>Invoice Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Contact_Validation</fullName>
        <active>true</active>
        <description>This validation rules checks whether the selected contact belongs the selected Account.</description>
        <errorConditionFormula>Account__r.Id &lt;&gt;  Contact_Name__r.AccountId</errorConditionFormula>
        <errorDisplayField>Contact_Name__c</errorDisplayField>
        <errorMessage>The Selected Contact on the Invoice Request does not belong to the selected Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Note_Reason_code_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Credit__c , ISPICKVAL( Credit_Note_Reason_code__c ,&quot;&quot;) )</errorConditionFormula>
        <errorDisplayField>Credit_Note_Reason_code__c</errorDisplayField>
        <errorMessage>Credit Note Reason code is required if the Credit tick box has been selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_Should_Match_Project_Currency</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(TEXT(CurrencyIsoCode) = TEXT(  Project__r.CurrencyIsoCode  ))</errorConditionFormula>
        <errorMessage>Invoice Request currency must be same as related Project currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Approval_Validation</fullName>
        <active>true</active>
        <description>This validation ensures that the user specifies the Discount Approver in case any discounts are allowed.</description>
        <errorConditionFormula>AND(OR(NOT(ISNULL(IM1_Discount__c)),  NOT(ISNULL(IM2_Discount__c)),  NOT(ISNULL(IM2_Discount__c)),  NOT(ISNULL(IM2_Discount__c)), NOT(ISNULL(IM2_Discount__c))), IF(Discount_Approved_By__c = &apos;&apos;, true, false))</errorConditionFormula>
        <errorDisplayField>Discount_Approved_By__c</errorDisplayField>
        <errorMessage>Discounts can only be applied if the approver of such discounts is specified. Please specify the approver of this discount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM1_Limit_DiscountAmount</fullName>
        <active>true</active>
        <description>The validation ensures that the Discount Amount for IM Lookup 1 is not greater than the Amount(Quanity*UnitPrice) for IM1.</description>
        <errorConditionFormula>OR
(
AND( NOT(Credit__c) ,IM1_Discount__c &gt; (IM1_Quantity__c* IM1_UnitPrice__c )),
AND( Credit__c ,IM1_Discount__c&lt; (IM1_Quantity__c* IM1_UnitPrice__c ))
)</errorConditionFormula>
        <errorDisplayField>IM1_Discount__c</errorDisplayField>
        <errorMessage>The Discount amount for IM Lookup 1 cannot be greater than the actual Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM1_LookupCodeAndAmount_Mandatory</fullName>
        <active>true</active>
        <description>This validation rules ensures that either both the LookupCode and Amount of IM1 are entered or none.</description>
        <errorConditionFormula>OR
(
AND( ISPICKVAL(IM1_LookupCode__c, &apos;&apos;),  NOT(ISNULL( IM1_UnitPrice__c ))),
AND( NOT(ISPICKVAL(IM1_LookupCode__c,&apos;&apos;)),  ISNULL( IM1_UnitPrice__c ))
)</errorConditionFormula>
        <errorDisplayField>IM1_UnitPrice__c</errorDisplayField>
        <errorMessage>Please ensure that you either enter both the IM Lookup Code and its respective Amount for IM1 or none</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM2_Limit_DiscountAmount</fullName>
        <active>true</active>
        <description>The validation ensures that the Discount Amount for IM Lookup 2 is not greater than the Amount(Quanity*UnitPrice) for IM2.</description>
        <errorConditionFormula>OR 
( 
AND( NOT(Credit__c) ,IM2_Discount__c &gt; (IM2_Quantity__c* IM2_UnitPrice__c )), 
AND( Credit__c ,IM2_Discount__c&lt; (IM2_Quantity__c* IM2_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM2_Discount__c</errorDisplayField>
        <errorMessage>The Discount amount for IM Lookup 2 cannot be greater than the actual Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM2_LookupCodeAndAmount_Mandatory</fullName>
        <active>true</active>
        <description>This validation rules ensures that either both the LookupCode and Amount of IM2 are entered or none.</description>
        <errorConditionFormula>OR 
( 
AND( ISPICKVAL(IM2_LookupCode__c, &apos;&apos;), NOT(ISNULL( IM2_UnitPrice__c ))), 
AND( NOT(ISPICKVAL(IM2_LookupCode__c,&apos;&apos;)), ISNULL( IM2_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM2_UnitPrice__c</errorDisplayField>
        <errorMessage>Please ensure that you either enter both the IM Lookup Code and its respective Amount for IM 2 or none</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM3_Limit_DiscountAmount</fullName>
        <active>true</active>
        <description>The validation ensures that the Discount Amount for IM Lookup 3 is not greater than the Amount(Quanity*UnitPrice) for IM3.</description>
        <errorConditionFormula>OR 
( 
AND( NOT(Credit__c) ,IM3_Discount__c &gt; (IM3_Quantity__c* IM3_UnitPrice__c )), 
AND( Credit__c ,IM3_Discount__c&lt; (IM3_Quantity__c* IM3_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM3_Discount__c</errorDisplayField>
        <errorMessage>The Discount amount for IM Lookup 3 cannot be greater than the actual Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM3_LookupCodeAndAmount_Mandatory</fullName>
        <active>true</active>
        <description>This validation rules ensures that either both the LookupCode and Amount of IM3 are entered or none.</description>
        <errorConditionFormula>OR 
( 
AND( ISPICKVAL(IM3_LookupCode__c, &apos;&apos;), NOT(ISNULL( IM3_UnitPrice__c ))), 
AND( NOT(ISPICKVAL(IM3_LookupCode__c,&apos;&apos;)), ISNULL( IM3_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM3_UnitPrice__c</errorDisplayField>
        <errorMessage>Please ensure that you either enter both the IM Lookup Code and its respective Amount for IM3 or none</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM4_Limit_DiscountAmount</fullName>
        <active>true</active>
        <description>The validation ensures that the Discount Amount for IM Lookup 4 is not greater than the Amount(Quanity*UnitPrice) for IM4.</description>
        <errorConditionFormula>OR 
( 
AND( NOT(Credit__c) ,IM4_Discount__c &gt; (IM4_Quantity__c* IM4_UnitPrice__c )), 
AND( Credit__c ,IM4_Discount__c&lt; (IM4_Quantity__c* IM4_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM4_Discount__c</errorDisplayField>
        <errorMessage>The Discount amount for IM Lookup 4 cannot be greater than the actual Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM4_LookupCodeAndAmount_Mandatory</fullName>
        <active>true</active>
        <description>This validation rules ensures that either both the LookupCode and Amount of IM4 are entered or none.</description>
        <errorConditionFormula>OR 
( 
AND( ISPICKVAL(IM4_LookupCode__c, &apos;&apos;), NOT(ISNULL( IM4_UnitPrice__c ))), 
AND( NOT(ISPICKVAL(IM4_LookupCode__c,&apos;&apos;)), ISNULL( IM4_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM4_UnitPrice__c</errorDisplayField>
        <errorMessage>Please ensure that you either enter both the IM Lookup Code and its respective Amount for IM4 or none</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM5_Limit_DiscountAmount</fullName>
        <active>true</active>
        <description>The validation ensures that the Discount Amount for IM Lookup 5 is not greater than the Amount(Quanity*UnitPrice) for IM5.</description>
        <errorConditionFormula>OR 
( 
AND( NOT(Credit__c) ,IM5_Discount__c &gt; (IM5_Quantity__c* IM5_UnitPrice__c )), 
AND( Credit__c ,IM5_Discount__c&lt; (IM5_Quantity__c* IM5_UnitPrice__c )) 
)</errorConditionFormula>
        <errorDisplayField>IM5_Discount__c</errorDisplayField>
        <errorMessage>The Discount amount for IM Lookup 5 cannot be greater than the actual Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IM5_LookupCodeAndAmount_Mandatory</fullName>
        <active>true</active>
        <description>This validation rules ensures that either both the LookupCode and Amount of IM5 are entered or none.</description>
        <errorConditionFormula>OR
(
AND( ISPICKVAL(IM5_LookupCode__c, &apos;&apos;),  NOT(ISNULL( IM5_UnitPrice__c ))),
AND( NOT(ISPICKVAL(IM5_LookupCode__c,&apos;&apos;)),  ISNULL( IM5_UnitPrice__c ))
)</errorConditionFormula>
        <errorDisplayField>IM5_UnitPrice__c</errorDisplayField>
        <errorMessage>Please ensure that you either enter both the IM Lookup Code and its respective Amount for IM5 or none</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LBU_Validation</fullName>
        <active>true</active>
        <description>This validation ensures that LBU of the invoice is same as the project&apos;s LBU.</description>
        <errorConditionFormula>TEXT(LBU__c)&lt;&gt; TEXT(Project__r.LBU__c)</errorConditionFormula>
        <errorMessage>The LBU of the invoice request has to be same as the LBU of the project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectCCYequaltoOrderCCY</fullName>
        <active>true</active>
        <description>Update on Invoice Request not allowed if the currency of the related project and the currency of the related order are not same.</description>
        <errorConditionFormula>IF(AND( Project__r.Order_Header_Number__c !=NULL,TEXT( Project__r.CurrencyIsoCode ) !=  TEXT( Project__r.Order_Header_Number__r.CurrencyIsoCode )),true,false )</errorConditionFormula>
        <errorMessage>Update on Invoice Request not allowed if the currency of the related project and the currency of the related order are not same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SunOrderNumberMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Processed&quot;), Sun_Invoice_No__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>Please enter SUN Order Number</errorMessage>
    </validationRules>
</CustomObject>